# doiTAG

./: Cargo.toml  README.md
src/: args.rs  doigen.rs  main.rs  md5sum.sh
test/: doigenerated.txt  file.fasta
