[package]
name = "doiTAG"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "doiTAG for sequence DOIs"
homepage = "https://github.com/rustcodepro/doiTAG"
repository = "https://github.com/rustcodepro/doiTAG"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
figlet-rs = "0.1.5"
rayon = "1.11.0"
tokio = { version = "1.47.1", features = ["full"] }
